--- a/app/templates/server/admin.add.twig
+++ b/app/templates/server/admin.add.twig
@@ -17,8 +17,21 @@
         <form method="post">
             <ul class="form-fields">
                 <li>
-                    <label for="hostname">Hostname</label>
-                    <input type="text" name="hostname" id="hostname" maxlength="24" required value="{{ form.hostname }}" class="text-input">
+                    <label for="servertype">Type</label>
+                    <ul class="radio-grid--form">
+
+                        {% set checked = form.server_type == 'rsync' ? ' checked' : '' %}
+                        <li>
+                            <input id="server_type-rsync" type="radio" name="server_type" value="rsync"{{ checked }}>
+                            <label for="server_type-rsync">Internal (Rsync)</label>
+                        </li>
+
+                        {% set checked = form.server_type == 'elasticbeanstalk' ? ' checked' : '' %}
+                        <li>
+                            <input id="server_type-elasticbeanstalk" type="radio" name="server_type" value="elasticbeanstalk"{{ checked }}>
+                            <label for="server_type-elasticbeanstalk">Elastic Beanstalk</label>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <label>Environment</label>
@@ -36,6 +49,15 @@
                         {% endfor %}
                     </ul>
                 </li>
+
+                <li>
+                    <label for="hostname">Hostname</label>
+                    <small class="additional">
+                        <strong>Rsync Servers Only</strong>
+                    </small>
+                    <input type="text" name="hostname" id="hostname" maxlength="24" value="{{ form.hostname }}" class="text-input">
+                </li>
+
                 <li>
                     {# primary action #}
                     <input class="btn-" type="submit" value="Add Server">
