Fix ebs ref on push info page

--- a/app/templates/push/push.twig
+++ b/app/templates/push/push.twig
@@ -42,7 +42,7 @@
                 {% if push.deployment %}
                     {% set path = push.deployment.path %}
                     {% if push.deployment.server.type == 'elasticbeanstalk' %}
-                        {% set path = push.deployment.server.name %}
+                        {% set path = push.deployment.ebsEnvironment %}
                     {% endif %}
 
                     <code>{{ path }}</code>
